Maquette figma reproduite 🖼️

--- a/index.html
+++ b/index.html
@@ -104,8 +104,19 @@
         </ion-fab-button> -->
       </ion-fab>
     <div id="map-container">
-    <div id="map">
-    </div>
+      <div id="map">
+      </div>
+      <div id="test">
+        <div id="details">
+          <div id="details-left">
+            <img src="./ressources/images/banff-national-park.jpg" alt="">
+          </div>
+          <div id="details-right">
+            <h1>Sentier marmotte</h1>
+          </div>
+        </div>
+      <ion-button><ion-icon name="navigate-outline"></ion-icon></ion-button>
+      </div>
     </div>
     <footer>
       
