--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.7.5/proj4.js"></script>
   <script src="vues/VueTableauBord.js"></script>
   <script src="vues/VueCarte.js"></script>
+  <script src="donnees/BaseDeDonneesDAO.js"></script>
 	<script src="donnees/SentierDAO.js"></script>
   <script defer src="App.js"></script>
 </head>
